# src/Rest/NodeBundle/Resources/config/swagger_conf.yml
@@ -135,6 +135,10 @@ nelmio_api_doc:
             ref_entity_name:
               type: "string"
 
+        NestedNodeList:
+          allOf:
+            - $ref: '#/components/schemas/Node'
+
         PaginatedNodeList:
           allOf:
             - $ref: '#/components/schemas/PaginatedResponse'
